src/css/style.css
/* src/style.css */

/* Light theme variables */
:root {
  --font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, Roboto, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
  --primary: #007D9C;
  --secondary: #007D9C;
  --dark: #2c3e50;
  --light: #ecf0f1;

  --header-dark: #007D9C;
  --header-dark-lighter: #304a61;
  --header-light: #ecf0f1;
  --nav-hover: #006A85;

  --focus-border: #4C9FFF;

  /* Button colors */
  --btn-bg: var(--primary);
  --btn-text: #fff;
  --custom-btn-text: #000;
  --custom-btn-bg: #FDDD00;
  --custom-btn-hover: #FDDD00;

  /* pre code */
  --code-bg: #f5f5f5;
  --code-color: #23272f;
  --code-border: #ccc;
  --code-comment: #818181;
  /* --code-radius: 0.25rem; */
  --code-radius: 0;
  --code-font: 'Fira Code', monospace;

  --code-btn-bg: #007D9C;
  --code-btn-bg-hover: #006A85;
  --code-btn-color: #fff;
  --code-btn-padding: 0.3rem 0.6rem;
  --code-btn-font-size: 0.85rem;
  /* --code-btn-radius: 0.25rem; */
  --code-btn-radius: 0;

  --form-bg: #fafafa;
  --form-border: #e0e0e0;
  --form-focus-border: var(--header-dark);
  --border: #f2f2f2;
  /* --border-radius: 0.25rem; */
  --border-radius: 0;
  --input-bg: #fff;
  --placeholder-text-color: #727272;

  /* Background & text */
  --bg-color: #f9f9f9;
  --text-color: #333;
  --footer-bg: var(--light);
  --footer-text: #555;
  --footer-link: var(--dark);
}

/* Dark theme variables */
[data-theme="dark"] {
  --primary: #5dade2;
  --secondary: #56BFD7;
  --dark: #ecf0f1;
  --light: #2c3e50;

  --header-dark: #14151A;
  --header-dark-lighter: #14151A;
  --header-light: #ecf0f1;
  --nav-hover: #333A45;

  --focus-border: #4C9FFF;

  --btn-bg: var(--dark);
  --btn-text: #fff;
  --custom-btn-text: #000;
  --custom-btn-bg: #FDDD00;
  --custom-btn-hover: #FDDD00;

  /* pre code */
  --code-bg: #23272F;
  --code-color: #dfdfdf;
  --code-border: #292c3c;
  --code-comment: #aaa;

  --code-btn-bg: #0077C8;
  --code-btn-bg-hover: #106FBF;

  --form-bg: #23272F;
  --form-border: #23272F;
  --form-focus-border: var(--primary);
  --border: #23272F;
  --input-bg: #333A45;
  --placeholder-text-color: #7D8495;

  --bg-color: #1B1D24;
  --text-color: #C8C9CB;
  --footer-bg: #23272F;
  --footer-text: #bbb;
  --footer-link: var(--secondary);
}

html {
  scroll-behavior: smooth;
  scroll-padding-top: 1rem;
}

body {
  font-family: var(--font-family);
  background-color: var(--bg-color);
  color: var(--text-color);
  margin: 0;
}

a {
  color: var(--secondary);
}

:focus-visible {
  outline: 2px solid var(--focus-border);
  outline-offset: 2px;
}

header {
  background-color: var(--header-dark);
  color: var(--header-light);
  padding-bottom: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

header section.star {
  margin-bottom: 0;
}

header section.star a {
  color: var(--btn-text);
  text-decoration: underline;
}

/* header>* {
  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
} */

.hamburger {
  display: none;
  flex-direction: column;
  cursor: pointer;
  background: none;
  border: none;
  gap: 5px;
  margin: 0.6rem 0;
}

.hamburger span {
  width: 25px;
  height: 3px;
  background-color: white;
  border-radius: 2px;
  transition: 0.3s;
}

.hamburger.active {
  position: fixed;
  z-index: 2000;
  display: flex;
}

.header-actions {
  transition: all 0.3s ease;
}

.hamburger.active span:nth-child(1) {
  transform: translateY(8px) rotate(45deg);
}

.hamburger.active span:nth-child(2) {
  opacity: 0;
}

.hamburger.active span:nth-child(3) {
  transform: translateY(-8px) rotate(-45deg);
}

.heart {
  fill: currentColor;
  /* color: #ff4d4d; */
  color: #fff;
  display: inline-block;
  vertical-align: middle;
  margin-right: 8px;
  margin-bottom: -1px;
}

.support-link:hover .heart {
  /* color: #ff3333; */
  color: #fff;
}

.nav-overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.5);
  z-index: 999;
}

.nav-links.active~.nav-overlay {
  display: block;
}

@media (max-width: 768px) {
  .hamburger-container {
    width: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .hamburger {
    display: flex;
    z-index: 1001;
  }

  .header-nav {
    position: relative;
    min-height: 50px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }

  .nav-links {
    position: fixed;
    top: 0;
    right: -100%;
    width: 200px;
    height: 100vh;
    background: var(--header-dark);
    flex-direction: column;
    padding: 50px 20px;
    transition: 0.4s ease;
    box-shadow: -5px 0 15px rgba(0, 0, 0, 0.5);
    z-index: 1500;
  }

  .nav-links.active {
    right: 0;
  }

  .nav-links .support-link {
    margin-left: -24px;
  }

  .header-link {
    font-size: 1.2rem;
    padding: 15px 0;
  }

  .header-actions {
    margin-right: 1rem;
  }
}

@media (min-width: 768px) {
  .nav-links {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    gap: 0.3rem;
    width: calc(100% - 2rem);
  }
}

.header-nav {
  padding: 0.5rem 1rem;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  gap: 0.3rem;
  width: calc(100% - 2rem);
}

.nav-links a,
.nav-links button,
.header-actions a,
.header-actions button {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 42px;
  min-width: 42px;
  border-radius: var(--border-radius);
}

.nav-links a:hover,
.nav-links button:hover,
.header-actions a:hover,
.header-actions button:hover {
  background-color: var(--nav-hover);
}

.header-actions {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.github-link svg {
  transition: opacity 0.2s;
  fill: var(--btn-text);
}

.header-link {
  font-size: 0.9rem;
  color: var(--header-light);
  text-decoration: none;
  padding: 0 0.5rem;
}
/* ... */

